--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="clearfix">
             <!-- <i style="color: var(--global-theme-color)">A practioner of Machine Learning, Computer Vision</i> -->
 
-<p>Hi! I am a final-year PhD student in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
+<p>Hi! I am a fifth-year PhD student in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
 
 <p>I am broadly interested in machine learning and computer vision, particularly <strong>vision-language learning</strong>, <strong>domain adaptation</strong>, <strong>weakly-supervised learning</strong>. I also work on <strong>adversarial attack and defense</strong> of neural networks.</p>
 
@@ -342,7 +342,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: December 06, 2023.
+Last updated: December 26, 2023.
       </div>
     </footer>
 
