--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="clearfix">
             <!-- <i style="color: var(--global-theme-color)">A practioner of Machine Learning, Computer Vision</i> -->
 
-<p>Hi! I am a fifth-year PhD student in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
+<p>Hi! I am a final-year PhD student in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
 
 <p>I am broadly interested in machine learning and computer vision, particularly <strong>vision-language learning</strong>, <strong>domain adaptation</strong>, <strong>weakly-supervised learning</strong>. I also work on <strong>adversarial attack and defense</strong> of neural networks.</p>
 
@@ -163,6 +163,16 @@
             <div class="table-responsive">
               <table class="table table-sm table-borderless">
                
+                <tr>
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
+                Aug 2024
+              </span></th>
+                  <td>
+                    Finished my internship at Amazon, Seattle! We worked on multi-modal In-Context-Learning for LLaVA model.
+
+ 
+                  </td>
+                </tr> 
                 <tr>
                   <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Aug 2023
@@ -294,6 +304,13 @@
     <div class="news">
     <h2>industry experience</h2>
     <div class="divs">
+        <div class="imgs"><img src="assets/img/images/logo/Amazon.png" width="150px"></div>
+        <div class="infos">
+<strong>Applied Scientist Intern</strong>, Amazon Shopping (May 2024 - Aug. 2024)<p>Multimodal LLM, Instruction tuning</p>
+</div>
+    </div>
+
+    <div class="divs">
         <div class="imgs"><img src="assets/img/images/logo/Adobe.png" width="150px"></div>
         <div class="infos">
 <strong>Machine Learning Engineer Intern</strong>, Adobe DX (May 2023 - Aug. 2023)<p>Time series forecasting</p>
@@ -317,7 +334,7 @@
 
     <div class="news">
       <h2>service</h2>
-      Reviewer: ICLR, NeurIPS, ICML, ICCV, CVPR, WACV, TPAMI, IJCV, TNNLS
+      Reviewer: ICLR, NeurIPS, ICML, ICCV, CVPR, ECCV, ACCV, WACV, TPAMI, IJCV, TNNLS
     </div>
 
 
@@ -340,7 +357,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2024 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: February 05, 2024.
+Last updated: August 22, 2024.
       </div>
     </footer>
 
