--- a/index.html
+++ b/index.html
@@ -165,48 +165,30 @@
                
                 <tr>
                   <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
+                Nov 2024
+              </span></th>
+                  <td>
+                    Successfully defended my PhD thesis.
+
+ 
+                  </td>
+                </tr> 
+                <tr>
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
+                Oct 2024
+              </span></th>
+                  <td>
+                    <a href="http://arxiv.org/abs/xxxx.xxxxx" rel="external nofollow noopener" target="_blank">One paper</a> on Semi-Supervised Learning accepted by <a href="https://wacv2025.thecvf.com/" rel="external nofollow noopener" target="_blank">WACV 2025</a>.
+ 
+                  </td>
+                </tr> 
+                <tr>
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Aug 2024
               </span></th>
                   <td>
                     Finished my internship at Amazon, Seattle! We worked on multi-modal In-Context-Learning for LLaVA model.
 
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Aug 2023
-              </span></th>
-                  <td>
-                    <a href="https://pubs.rsc.org/en/content/articlehtml/2023/dd/d3dd00114h" rel="external nofollow noopener" target="_blank">One paper</a> accepted by <a href="https://pubs.rsc.org/en/journals/journalissues/dd" rel="external nofollow noopener" target="_blank">Digital Discovery</a>!
-
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Jul 2023
-              </span></th>
-                  <td>
-                    <a href="http://arxiv.org/abs/2208.12856" rel="external nofollow noopener" target="_blank">One paper</a> on Active Domain Adaptation accepted by <a href="https://iccv2023.thecvf.com/" rel="external nofollow noopener" target="_blank">ICCV 2023</a>!
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Mar 2023
-              </span></th>
-                  <td>
-                    <a href="https://arxiv.org/abs/2211.12044" rel="external nofollow noopener" target="_blank">One paper</a> on Backdoor Cleansing accepted by <a href="https://cvpr2023.thecvf.com/" rel="external nofollow noopener" target="_blank">CVPR 2023</a>! A preliminary version appears in <a href="https://iclr23-bands.github.io/" rel="external nofollow noopener" target="_blank">BANDS</a> workshop as Oral Talk.
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Feb 2023
-              </span></th>
-                  <td>
-                    Attended <a href="https://aaai.org/Conferences/AAAI-23/" rel="external nofollow noopener" target="_blank">AAAI 2023</a> and presented <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26185" rel="external nofollow noopener" target="_blank">one paper</a> on Domain Adaptation at Washington, DC.
  
                   </td>
                 </tr> 
@@ -357,7 +339,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2024 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: August 22, 2024.
+Last updated: November 24, 2024.
       </div>
     </footer>
 
