--- a/publications/index.html
+++ b/publications/index.html
@@ -112,7 +112,11 @@
 <p>Full publications can be found in <b><a href="https://scholar.google.com/citations?user=izyo6gkAAAAJ" rel="external nofollow noopener" target="_blank">Google Scholar</a></b>.</p>
 <div class="publications">
   <h2 class="year">xx</h2>
-  <ol class="bibliography"><li>
+  <ol class="bibliography"></ol>
+
+  <h2 class="year">2023</h2>
+  <ol class="bibliography">
+<li>
 <!-- _layouts/bib.html -->
       <div class="row">
         <div class="col-sm-2 abbr"><div>arXiv</div></div>
@@ -131,7 +135,7 @@
           <!-- Journal/Book title and date -->
           
           <div class="periodical">
-            <em>arXiv preprint arXiv:2303.15564</em>  xx
+            <em>arXiv preprint arXiv:2303.15564</em>  2023
           </div>
         
           <!-- Links/Buttons -->
@@ -147,10 +151,7 @@
           </div>
         </div>
       </div>
-</li></ol>
-
-  <h2 class="year">2023</h2>
-  <ol class="bibliography">
+</li>
 <li>
 <!-- _layouts/bib.html -->
       <div class="row">
@@ -394,7 +395,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2024 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: November 24, 2024.
+Last updated: November 27, 2024.
       </div>
     </footer>
 
