--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="clearfix">
             <!-- <i style="color: var(--global-theme-color)">A practioner of Machine Learning, Computer Vision</i> -->
 
-<p>Hi! I am a final-year PhD student in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
+<p>Hi! I am an Applied Scientist at Amazon. Previously, I did my PhD study in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
 
 <p>I am broadly interested in machine learning and computer vision, particularly <strong>vision-language learning</strong>, <strong>domain adaptation</strong>, <strong>weakly-supervised learning</strong>. I also work on <strong>adversarial attack and defense</strong> of neural networks.</p>
 
@@ -288,7 +288,8 @@
     <div class="divs">
         <div class="imgs"><img src="assets/img/images/logo/Amazon.png" width="150px"></div>
         <div class="infos">
-<strong>Applied Scientist Intern</strong>, Amazon Shopping (May 2024 - Aug. 2024)<p>Multimodal LLM, Instruction tuning</p>
+<p><strong>Applied Scientist</strong>, Amazon Shopping (Nov. 2024 - )</p>
+<strong>Applied Scientist Intern</strong>, Amazon Shopping (May 2024 - Aug. 2024)<p>Multimodal LLM, Instruction tuning, Agents</p>
 </div>
     </div>
 
@@ -316,7 +317,7 @@
 
     <div class="news">
       <h2>service</h2>
-      Reviewer: ICLR, NeurIPS, ICML, ICCV, CVPR, ECCV, ACCV, WACV, TPAMI, IJCV, TNNLS
+      Reviewer: ICLR, NeurIPS, ICML, ICCV, CVPR, ECCV, AISTATS, ACCV, WACV, TPAMI, IJCV, TNNLS
     </div>
 
 
@@ -339,7 +340,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2024 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: November 24, 2024.
+Last updated: November 27, 2024.
       </div>
     </footer>
 
