--- a/index.html
+++ b/index.html
@@ -132,11 +132,13 @@
           <div class="clearfix">
             <!-- <i style="color: var(--global-theme-color)">A practioner of Machine Learning, Computer Vision</i> -->
 
-<p>Hi! I am an Applied Scientist at Amazon. Previously, I did my PhD study in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
+<p>Hi! I am an Applied Scientist at Amazon. My work focuses on <strong>AI agents</strong>, <strong>multi-modal models</strong>, in particular for shopping scenarios.</p>
 
-<p>I am broadly interested in machine learning and computer vision, particularly <strong>vision-language learning</strong>, <strong>domain adaptation</strong>, <strong>weakly-supervised learning</strong>. I also work on <strong>adversarial attack and defense</strong> of neural networks.</p>
+<p>Previously, I did my PhD study in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
 
-<p>Contact: tao # cs.stonybrook.edu</p>
+<p>I am broadly interested in machine learning and computer vision, particularly AI agents, vision-language learning, domain adaptation, weakly-supervised learning. I also work on adversarial attack and defense of neural networks.</p>
+
+<p>Contact: taosun.ai # gmail.com</p>
 
 
           <!-- Social -->
@@ -159,10 +161,40 @@
 
           <!-- News -->          
           <div class="news">
-            <h2>news</h2>
+            <h2>News</h2>
             <div class="table-responsive">
               <table class="table table-sm table-borderless">
                
+                <tr>
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
+                Apr 2025
+              </span></th>
+                  <td>
+                    Our project <a href="https://www.aboutamazon.com/news/retail/amazon-shopping-app-buy-for-me-brands" rel="external nofollow noopener" target="_blank">Buy for Me</a> shopping agent was launched!
+
+ 
+                  </td>
+                </tr> 
+                <tr>
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
+                Jan 2025
+              </span></th>
+                  <td>
+                    Presented <a href="https://aclanthology.org/2025.evalmg-1.4/" rel="external nofollow noopener" target="_blank">intern work</a> at [COLING’25 EvalMG] (https://evalmg.github.io/) workshop. We worked on multi-modal In-Context-Learning for LLaVA model.
+
+ 
+                  </td>
+                </tr> 
+                <tr>
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
+                Nov 2024
+              </span></th>
+                  <td>
+                    Started working as Applied Scientist at Amazon, Seattle!
+
+ 
+                  </td>
+                </tr> 
                 <tr>
                   <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Nov 2024
@@ -178,17 +210,7 @@
                 Oct 2024
               </span></th>
                   <td>
-                    <a href="http://arxiv.org/abs/xxxx.xxxxx" rel="external nofollow noopener" target="_blank">One paper</a> on Semi-Supervised Learning accepted by <a href="https://wacv2025.thecvf.com/" rel="external nofollow noopener" target="_blank">WACV 2025</a>.
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Aug 2024
-              </span></th>
-                  <td>
-                    Finished my internship at Amazon, Seattle! We worked on multi-modal In-Context-Learning for LLaVA model.
-
+                    <a href="https://www.computer.org/csdl/proceedings-article/wacv/2025/108300h925/25KlVBVWMyA" rel="external nofollow noopener" target="_blank">One paper</a> on Semi-Supervised Learning was accepted by <a href="https://wacv2025.thecvf.com/" rel="external nofollow noopener" target="_blank">WACV 2025</a>.
  
                   </td>
                 </tr> 
@@ -198,12 +220,21 @@
 
           <!-- Selected papers -->
           <div class="news">
-            <h2>selected publications</h2>
+            <h2>Selected publications</h2>
+
+            <ul><li>
+            <b>LLaVA-RE: Binary image-text relevancy evaluation with multimodal large language model</b>
+            <br>
+            <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Oliver Liu, JinJin Li, Lan Ma
+            <br>
+
+            EvalMG 2025    |    <a href="https://aclanthology.org/2025.evalmg-1.4/" rel="external nofollow noopener" target="_blank">Paper</a>  •  <a href="https://arxiv.org/abs/2508.05602" rel="external nofollow noopener" target="_blank">arXiv</a>
+            </li></ul>
 
             <ul><li>
             <b>Mask and Restore: Blind Backdoor Defense at Test Time with Masked Autoencoder</b>
             <br>
-            <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Lu Pang, Chao Chen, and Haibin Ling
+            <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Lu Pang, Chao Chen, Weimin Lyu, and Haibin Ling
             <br>
 
             arXiv 2023    |    <a href="https://arxiv.org/abs/2303.15564" rel="external nofollow noopener" target="_blank">arXiv</a>  •  <a href="https://github.com/tsun/BDMAE" rel="external nofollow noopener" target="_blank">Code</a>
@@ -255,14 +286,6 @@
             CVPR 2022    |    <a href="https://openaccess.thecvf.com/content/CVPR2022/html/Sun_Safe_Self-Refinement_for_Transformer-Based_Domain_Adaptation_CVPR_2022_paper.html" rel="external nofollow noopener" target="_blank">Paper</a>  •  <a href="https://arxiv.org/abs/2204.07683" rel="external nofollow noopener" target="_blank">arXiv</a>  •  <a href="https://github.com/tsun/SSRT" rel="external nofollow noopener" target="_blank">Code</a>
             </li></ul>
 
-            <ul><li>
-            <b>End-to-end Full Projector Compensation</b>
-            <br>
-             Bingyao Huang, <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, and Haibin Ling
-            <br>
-            <!-- IEEE Transactions on Pattern Analysis and Machine Intelligence 2021. [<a href="https://arxiv.org/pdf/2008.00965.pdf">arXiv</a>] [<a href="https://github.com/BingyaoHuang/CompenNeSt-plusplus">Code</a>] -->
-            TPAMI 2021    |    <a href="https://ieeexplore.ieee.org/document/9318552" rel="external nofollow noopener" target="_blank">Paper</a>  •  <a href="https://arxiv.org/abs/2008.00965" rel="external nofollow noopener" target="_blank">arXiv</a>  •  <a href="https://github.com/BingyaoHuang/CompenNeSt-plusplus" rel="external nofollow noopener" target="_blank">Code</a>
-            </li></ul>
 
           </div>
   
@@ -284,7 +307,7 @@
   </style>
 
     <div class="news">
-    <h2>industry experience</h2>
+    <h2>Industry experience</h2>
     <div class="divs">
         <div class="imgs"><img src="assets/img/images/logo/Amazon.png" width="150px"></div>
         <div class="infos">
@@ -316,8 +339,8 @@
     <br>
 
     <div class="news">
-      <h2>service</h2>
-      Reviewer: ICLR, NeurIPS, ICML, ICCV, CVPR, ECCV, AISTATS, ACCV, WACV, TPAMI, IJCV, TNNLS
+      <h2>Service</h2>
+      Reviewer: ICLR, NeurIPS, ICML, ICCV, CVPR, ECCV, AISTATS, ACCV, WACV, AAAI, MM, TPAMI, IJCV, TNNLS
     </div>
 
 
@@ -339,8 +362,8 @@
     <!-- Footer -->    
     <footer class="fixed-bottom">
       <div class="container mt-0">
-        © Copyright 2024 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: November 27, 2024.
+        © Copyright 2025 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
+Last updated: August 19, 2025.
       </div>
     </footer>
 
