--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 Jan 2025
               </span></th>
                   <td>
-                    Presented <a href="https://aclanthology.org/2025.evalmg-1.4/" rel="external nofollow noopener" target="_blank">intern work</a> at [COLING’25 EvalMG] (https://evalmg.github.io/) workshop. We worked on multi-modal In-Context-Learning for LLaVA model.
+                    Presented <a href="https://aclanthology.org/2025.evalmg-1.4/" rel="external nofollow noopener" target="_blank">intern work</a> at <a href="https://evalmg.github.io/" rel="external nofollow noopener" target="_blank">EvalMG25 @ COLING</a> workshop. We worked on multi-modal In-Context-Learning for LLaVA model.
 
  
                   </td>
