--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <p>Hi! I am an Applied Scientist at Amazon. My work focuses on <strong>AI agents</strong>, <strong>multi-modal models</strong>, in particular for shopping scenarios.</p>
 
-<p>Previously, I did my PhD study in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
+<p>Previously, I received Ph.D. in <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Computer Science</a> at Stony Brook University advised by Prof. <a href="https://haibinling.github.io/" target="_blank" rel="nofollow">Haibin Ling</a> in 2024.</p>
 
 <p>I am broadly interested in machine learning and computer vision, particularly AI agents, vision-language learning, domain adaptation, weakly-supervised learning. I also work on adversarial attack and defense of neural networks.</p>
 
@@ -177,16 +177,6 @@
                 </tr> 
                 <tr>
                   <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Jan 2025
-              </span></th>
-                  <td>
-                    Presented <a href="https://aclanthology.org/2025.evalmg-1.4/" rel="external nofollow noopener" target="_blank">intern work</a> at <a href="https://evalmg.github.io/" rel="external nofollow noopener" target="_blank">EvalMG25 @ COLING</a> workshop. We worked on multi-modal In-Context-Learning for LLaVA model.
-
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Nov 2024
               </span></th>
                   <td>
@@ -202,15 +192,6 @@
                   <td>
                     Successfully defended my PhD thesis.
 
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Oct 2024
-              </span></th>
-                  <td>
-                    <a href="https://www.computer.org/csdl/proceedings-article/wacv/2025/108300h925/25KlVBVWMyA" rel="external nofollow noopener" target="_blank">One paper</a> on Semi-Supervised Learning was accepted by <a href="https://wacv2025.thecvf.com/" rel="external nofollow noopener" target="_blank">WACV 2025</a>.
  
                   </td>
                 </tr> 
@@ -363,7 +344,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2025 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: August 19, 2025.
+Last updated: December 27, 2025.
       </div>
     </footer>
 
