--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <p>Hi! I am an Applied Scientist at Amazon. My work focuses on <strong>AI agents</strong>, <strong>multi-modal models</strong>, in particular for shopping scenarios.</p>
 
-<p>Previously, I received Ph.D. in <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Computer Science</a> at Stony Brook University advised by Prof. <a href="https://haibinling.github.io/" target="_blank" rel="nofollow">Haibin Ling</a> in 2024.</p>
+<p>I received Ph.D. in <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Computer Science</a> at Stony Brook University advised by Prof. <a href="https://haibinling.github.io/" target="_blank" rel="nofollow">Haibin Ling</a> in 2024.</p>
 
 <p>I am broadly interested in machine learning and computer vision, particularly AI agents, vision-language learning, domain adaptation, weakly-supervised learning. I also work on adversarial attack and defense of neural networks.</p>
 
